--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <title>Sass Boiler Plate</title>
 
 <!-- STYLESHEETS -->
-    <link rel="stylesheet" href="/stylesheets/master.css" type="text/css">
+    <link rel="stylesheet" href="stylesheets/master.css" type="text/css">
+
+<!-- JAVASCRIPT -->
+  <script type="text/javascript" src="scripts/core.js"></script>
 
   </head>
   <body>
