completed js factor

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Sass Boiler Plate</title>
+    <title>JavaScript Tests</title>
 
 <!-- STYLESHEETS -->
     <link rel="stylesheet" href="stylesheets/master.css" type="text/css">
@@ -12,6 +12,13 @@
 
   </head>
   <body>
-    <p>This is a simple HTML/CSS/SASS Boiler Plate ready for you.</p>
+    <h1>Input</h1></br>
+    <h2>What number do you want me to find the highest factor for?</h2></br>
+    <input type="text" name="" id="userInput">
+    <input type="checkbox" name="onlyHighest" value="" id="onlyHighest">Find only highest factor</br></br>
+    <button type="button" name="button" onclick="calculate()">Calculate</button>
+    <button type="button" name="button" onclick="reset()">Reset</button></br></br>
+    <h1>Output</h1></br>
+    <p id="jsOutlet"><em style="font-style: italic;">Output...</em</p>
   </body>
 </html>
